--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
   </script>
   
   <body onload="init();">
-    <h1>chatapp</h1>
+    <h1>Whatsapp</h1>
     <div id="message-div" class="message-div">
       <h3 id="channel-name-header" class="channel-name-header">test</h1>
       <ul id="messages" class="messages"></ul>
